<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FiveMinuteJournalApp</string>
    <string name="home_label">Five Minute Journal</string>
    <string name="welcome_text">WELCOME TO A SIMPLE BUT YET EFFECTIVE TREATMENT.</string>
    <string name="open_journal_button">Open my journal</string>
    <string name="action_settings">Settings</string>
    <string name="logout_menu_label">Log out</string>
    <string name="login_tab_label">Log In</string>
    <string name="signup_tab_label">Sign Up</string>
    <string name="login_username_label">Username:</string>
    <string name="login_email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="signup_button_label">Sign up</string>
    <string name="login_button_label">Log in</string>
    <string name="username_signup_hint">Username will be used for identification</string>
    <string name="username_login_hint">Username as registered</string>
    <string name="password_hint">Your password here</string>
    <string name="email_hint">example@domain.com</string>
    <string name="sign_in_progress_title">Signing In...</string>
    <string name="sign_in_progress_message">Please Wait!</string>
    <string name="failed_to_login_message">Failed to log in</string>
    <string name="citation_label">Citation of the day:</string>
    <string name="citation_hint">Enter a citation...</string>
    <string name="save_day_button_label">Save Day</string>

</resources>